--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       <div class="sidebar-info">
 
         <figure class="avatar-box">
-          <img src="images.png" alt="Chelshiya" width="80">
+          <img src="images (1).png" alt="Chelshiya" width="80">
         </figure>
 
         <div class="info-content">
